--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,11 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/homestead": "^7.0",
+        "laravel/passport": "^4.0",
+        "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
         "league/commonmark": "^0.17.0",
+        "league/flysystem-aws-s3-v3": "~1.0",
         "sentry/sentry-laravel": "^0.8.0",
         "spatie/laravel-fractal": "^5.3"
     },
