--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "devDependencies": {
         "axios": "^0.17",
         "bootstrap-sass": "^3.3.7",
-        "cross-env": "^5.1",
+        "cross-env": "^5.1.3",
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "feather-icons": "^4.5.0",
         "tailwindcss": "^0.4.0",
         "vue-resource": "^1.3.5",
         "vue-router": "^3.0.1"
