--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "feather-icons": "^4.5.0",
         "tailwindcss": "^0.4.0",
+        "vue-pdf": "^3.1.2",
         "vue-resource": "^1.3.5",
         "vue-router": "^3.0.1"
     }
