--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "dropzone": "^5.3.0",
         "feather-icons": "^4.5.0",
         "moment": "^2.20.1",
         "tailwindcss": "^0.4.0",
         "vue-pdf": "^3.1.2",
         "vue-resource": "^1.3.5",
-        "vue-router": "^3.0.1"
+        "vue-router": "^3.0.1",
+        "vue2-dropzone": "^3.0.3"
     }
 }
