--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ php:
 
 install:
   - travis_retry composer install --prefer-dist --no-interaction --no-suggest
+  - cp .env.example .env
 
 script:
   - vendor/bin/phpunit --verbose --coverage-clover build/logs/clover.xml
